policies/07-add-default-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-default-labels
spec:
  rules:
    - name: add-security-labels
      match:
        any:
          - resources:
              kinds:
                - Pod
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              security.tfm/hardened-by: kyverno
              security.tfm/policy-version: "v1.0"
      exclude:
        any:
          - resources:
              namespaces:
                - kyverno
                - kube-system
                - argocd
