policies/09-disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: require-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "El tag 'latest' no esta permitido. Usar tags versionados."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
